Make iframe fit perfectly in the screen

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         of <a class='text-blue-700 underline' href="https://gitlab.com/coopdevs/community-maps-builder" target="_blank">Coopdevs community maps builder</a>
       </p>
     </div>
-    <div class='flex px-6 min-h-screen w-full mt-6 mx-auto'>
+    <div class='flex px-2 sm:px-6 min-h-[calc(100vh-153px)] sm:min-h-[calc(100vh-140px)] w-full mt-6 mx-auto'>
       <div class='min-h-full w-full rounded overflow-hidden bg-gray-100 '>
         <iframe
           class="h-full w-full"
