--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coopdevs community maps iframe integration test</title>
     <link href="/output.css" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <div class='container py-4'>
