--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
     <div class='flex px-2 sm:px-6 min-h-[calc(100vh-153px)] sm:min-h-[calc(100vh-140px)] w-full mt-6 mx-auto'>
       <div class='min-h-full w-full rounded overflow-hidden bg-gray-100 '>
         <iframe
+          id='map'
           class="h-full w-full"
           src="http://localhost:3000/demo/maps/first-map"
           frameborder="0"
         ></iframe>
       </div>
     </div>
+    <script
+      type="text/javascript"
+      id="community-maps-builder"
+      data-iframe-id="map"
+      src="http://localhost:3000/iframe-integration.js"
+    ></script>
   </body>
 </html>
