Allow clipboard-write in iframes

--- a/a-child-page/index.html
+++ b/a-child-page/index.html
@@ -19,6 +19,7 @@
       <div class='min-h-full w-full rounded overflow-hidden bg-gray-100 '>
         <iframe
           allowfullscreen
+          allow="clipboard-write"
           id='map'
           class="h-full w-full"
           src="http://localhost:3000/demo/maps/first-map"
